# cpp-ubloxconf

./: Makefile.am  README.md  autogen.sh  configure.ac  keywords.txt  library.json  library.properties  platformio.ini  submodule-commit.sh  submodule-update.sh
app/: Makefile.am  ubloxconf.c
doc/: Doxyfile.in  Makefile.am  genheader.tex
examples/: Makefile.am
examples/common/: config-hw.h  config-sw.h  utils.cpp  utils.h
examples/ubloxtest/: Makefile.am  testmain.cpp  ubloxtest.ino
src/: Makefile.am  libgpsutils.pc.in  ubloxconn.c  ubloxconn.h  ubloxcstr.c  ubloxcstr.h  ubloxutils.c  ubloxutils.h
tests/: Makefile.am  test-ubloxconn.c
